Fix dark mode highlight

--- a/themes/julieturner/assets/sass/main.scss
+++ b/themes/julieturner/assets/sass/main.scss
@@ -18,6 +18,8 @@
     --jt-background: #000000;
     --jt-background2: #404040;
     --jt-foreground: #FFFFFF;
+    --jt-highlight: #9ACE1D;
+    --jt-highlight2: #7940d5;
 
     img {
       filter: brightness(.8) contrast(1.2);
